--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: true
       matrix:
         php: ['8.1', '8.2']
-        symfony: ['5.4.*', '6.2.*', '6.3.*']
+        symfony: ['5.4.*', '6.3.*']
         pagerfanta: ['']
         composer-flags: ['--prefer-stable']
         can-fail: [false]
@@ -18,7 +18,7 @@ jobs:
         include:
           # Run "no Twig" build on latest PHP and Symfony LTS
           - php: '8.2'
-            symfony: '5.4.*'
+            symfony: '6.4.*@dev'
             composer-flags: '--prefer-stable'
             can-fail: false
             with-twig: false
@@ -26,6 +26,16 @@ jobs:
             symfony: '5.4.*'
             composer-flags: '--prefer-stable --prefer-lowest'
             can-fail: false
+            with-twig: true
+          - php: '8.2'
+            symfony: '6.4.*@dev'
+            composer-flags: '--prefer-stable'
+            can-fail: true
+            with-twig: true
+          - php: '8.2'
+            symfony: '7.0.*@dev'
+            composer-flags: '--prefer-stable'
+            can-fail: true
             with-twig: true
 
     name: "PHP ${{ matrix.php }}${{ matrix.pagerfanta != '' && format(' - Pagerfanta {0}', matrix.pagerfanta) || '' }}${{ matrix.with-twig == false && ' - Without Twig' || '' }} - Symfony ${{ matrix.symfony }}${{ matrix.composer-flags != '' && format(' - Composer {0}', matrix.composer-flags) || '' }}"
