--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,12 @@
         "php": "^8.1",
         "pagerfanta/core": "^3.7 || ^4.0",
         "psr/container": "^1.0 || ^2.0",
-        "symfony/config": "^5.4 || ^6.2",
-        "symfony/dependency-injection": "^5.4 || ^6.2",
-        "symfony/http-foundation": "^5.4 || ^6.2",
-        "symfony/http-kernel": "^5.4 || ^6.2",
-        "symfony/property-access": "^5.4 || ^6.2",
-        "symfony/routing": "^5.4 || ^6.2"
+        "symfony/config": "^5.4 || ^6.3 || ^7.0",
+        "symfony/dependency-injection": "^5.4 || ^6.3 || ^7.0",
+        "symfony/http-foundation": "^5.4 || ^6.3 || ^7.0",
+        "symfony/http-kernel": "^5.4 || ^6.3 || ^7.0",
+        "symfony/property-access": "^5.4 || ^6.3 || ^7.0",
+        "symfony/routing": "^5.4 || ^6.3 || ^7.0"
     },
     "require-dev": {
         "jms/serializer": "^3.18",
@@ -25,21 +25,21 @@
         "phpstan/phpstan-phpunit": "1.3.14",
         "phpstan/phpstan-symfony": "1.3.2",
         "phpunit/phpunit": "9.6.12",
-        "symfony/phpunit-bridge": "^5.4 || ^6.2",
-        "symfony/serializer": "^5.4 || ^6.2",
-        "symfony/twig-bridge": "^5.4 || ^6.2",
-        "symfony/twig-bundle": "^5.4 || ^6.2",
-        "symfony/translation": "^5.4 || ^6.2",
+        "symfony/phpunit-bridge": "^5.4 || ^6.3 || ^7.0",
+        "symfony/serializer": "^5.4 || ^6.3 || ^7.0",
+        "symfony/twig-bridge": "^5.4 || ^6.3 || ^7.0",
+        "symfony/twig-bundle": "^5.4 || ^6.3 || ^7.0",
+        "symfony/translation": "^5.4 || ^6.3 || ^7.0",
         "twig/twig": "^2.13 || ^3.0"
     },
     "conflict": {
         "jms/serializer": "<3.18",
         "jms/serializer-bundle": "<4.2",
         "pagerfanta/twig": "<3.7",
-        "symfony/serializer": "<5.4 || >=6.0,<6.2",
-        "symfony/translation": "<5.4 || >=6.0,<6.2",
-        "symfony/twig-bridge": "<5.4 || >=6.0,<6.2",
-        "symfony/twig-bundle": "<5.4 || >=6.0,<6.2",
+        "symfony/serializer": "<5.4 || >=6.0,<6.3",
+        "symfony/translation": "<5.4 || >=6.0,<6.3",
+        "symfony/twig-bridge": "<5.4 || >=6.0,<6.3",
+        "symfony/twig-bundle": "<5.4 || >=6.0,<6.3",
         "twig/twig": "<2.13",
         "white-october/pagerfanta-bundle": "*"
     },
